--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,4 +6,6 @@
 @use 'components/upload';
 @use 'components/results';
 @use 'components/bosses';
+@use 'components/schedule';
+@use 'components/coming-soon';
 @use 'components/footer';
