--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,3 +9,7 @@
 @use 'components/schedule';
 @use 'components/coming-soon';
 @use 'components/footer';
+@use 'components/guild-info';
+@use 'components/hall-of-glory';
+@use 'components/navigation';
+@use 'components/loading';
